--- a/.gitignore
+++ b/.gitignore
@@ -337,3 +337,8 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+
+#Custom
+dh2048.pem
+server.crt
+server.key
