--- a/LoginServer.vcxproj.filters
+++ b/LoginServer.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="src\jsoncpp.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="..\ThirdParty\certificateUtils\certificateUtils.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="headers\LoginConnectionHandler.h">
