Implemented auth using email on login stage

--- a/LoginServer.vcxproj.filters
+++ b/LoginServer.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="..\ThirdParty\certificateUtils\certificateUtils.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="..\ThirdParty\emailHandler\EmailHandler.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="headers\LoginConnectionHandler.h">
